samples/_failures_safe/1761491922_fa0ff8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17982082.c: In function ‘main’:
./samples/SAFE/__tmp_17982082.c:157:17: error: expected declaration or statement at end of input
  157 |                 int status = add_matrices(&a, &b, &result);
      |                 ^~~
./samples/SAFE/__tmp_17982082.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_17982082.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_17982082.c:157:17: error: expected declaration or statement at end of input
